# spark-delta-iceberg

./: README.md  index.html  mkdocs.yml  pyproject.toml
data/delta/vendas_sul/: .part-00000-0a073fe6-9098-4233-b505-f249ea4c203e-c000.snappy.parquet.crc  .part-00000-1131a0d8-2f8d-47f7-b311-a2510fcfd722-c000.snappy.parquet.crc  .part-00000-4a2d7830-b747-42fd-b948-3f08f58a3481-c000.snappy.parquet.crc  .part-00000-8e9a5c35-3738-44c6-aa25-8b71a6e09c5c-c000.snappy.parquet.crc  .part-00000-94e5dfe2-b445-4bdf-8706-31b81b5e2f8e-c000.snappy.parquet.crc  .part-00000-a5dbbaf5-b242-49ba-9610-b9993ef45f78-c000.snappy.parquet.crc  .part-00000-c0ac641c-bb18-4def-935c-4e1db1e1a16d-c000.snappy.parquet.crc  .part-00000-c3ff80c5-bb72-4d6b-a54e-f63361b34cb4-c000.snappy.parquet.crc  .part-00000-ca3f0f4c-81d8-4b5d-b340-d053de1fa790-c000.snappy.parquet.crc  .part-00000-caa4eb6b-a2a0-4675-adde-67e10b489d0e-c000.snappy.parquet.crc  .part-00000-e24bcee2-de9d-4e01-bfa0-6980a4df200a-c000.snappy.parquet.crc  .part-00000-f1cefc5f-b2fb-4746-81ab-6db04cea7023-c000.snappy.parquet.crc  (+12 more)
data/raw/: clientes.csv  vendas.csv
delta/: index.html
docs/: delta.md  iceberg.md  index.md  spark.md
iceberg/: index.html
search/: search_index.json
site/: 404.html  index.html  search.html
site/delta/: index.html
site/iceberg/: index.html
site/search/: search_index.json
site/spark/: index.html
spark/: index.html
src/: apache-iceberg.ipynb  commons.py  delta-lake.ipynb  run_delta.py  run_iceberg.py
src/.ipynb_checkpoints/: apache-iceberg-checkpoint.ipynb  delta-lake-checkpoint.ipynb
(+158 files in other folders)
