[project]
name = "ecommerce-spark-lakehouse"
version = "0.1.0"
description = "Trabalho de Arquitetura de Dados - Vendas E-commerce com Spark, Delta e Iceberg"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "delta-spark==3.2.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "mkdocs>=1.6.1",
    "pyspark==3.5.3",
]
